Fix horizontal scroll issue
The page would scroll horizontally when on mobile. The issue was the size of the sun was too big

--- a/css/main.css
+++ b/css/main.css
@@ -63,8 +63,9 @@ body {
 }
 
 #sun img {
-  width: 120%;
+  width: 100%;
   top: -20%;
+  overflow: hidden;
 }
 
 #mercury img,
